--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@400;700&family=Ubuntu:wght@400;700&display=swap');
+
+* {
+  font-family: 'Ubuntu', 'Roboto Condensed', sans-serif;
+}
+
 .App {
   text-align: center;
+  background-color: #f5f5f5;
 }
 
 .App-logo {
@@ -35,4 +42,8 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.title {
+  margin-top: 5vh;
 }
